--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/node": "^20.6.0",
+    "fastify": "^4.22.2"
   }
 }
